hphp/hack/test/typecheck/new_inference/eager_solve/map_any.php.exp
ERROR: File "map_any.php", line 11, characters 26-27:
Was expecting a type hint (Typing[4032])
ERROR: File "map_any.php", line 15, characters 7-8:
Was expecting an object but type is unknown (Typing[4297])
  File "map_any.php", line 12, characters 3-8:
  It is unknown because type parameter `T1` of `my_map` could not be determined. Please add explicit type parameters to the invocation of `my_map`
  File "map_any.php", line 6, characters 14-15:
    via this generic `T1`
